--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Forum&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Forum&display=swap");
 
-:root{
+:root {
   --color-body: #f9f1f8;
   --color-text: #666;
   --color-light: #dbdbdb;
@@ -10,99 +10,107 @@
   --font-size-title: 20px;
 }
 
-
 /* --- RESET --- */
 * {
-    box-sizing: border-box;
-  }
-  body {
-    background-image: url("./img/background.jpg");
-    margin: 0;
-    background-size: cover;   
-    background-repeat: no-repeat;
-    background-position: center center;
-    font-family: 'Forum', cursive;
-    color: var(--color-text);
-  }
+  box-sizing: border-box;
+}
 
-  h1, h2, h3, p{
-    margin-top: 0;
-    margin-bottom: 0;
-  }
+html {
+  scroll-behavior: smooth;
+}
 
-  img {
-    display: block;
-    width: 100%;
-  }
-  input {
-    border: var(--color-pink) solid 1px;
-    outline: none;
-  }
-  button {
-    font-family: inherit;
-    border: none;
-  }
+body {
+  background-image: url("./img/background.jpg");
+  margin: 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  font-family: "Forum", cursive;
+  color: var(--color-text);
+}
+
+h1,
+h2,
+h3,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+input {
+  border: var(--color-pink) solid 1px;
+  outline: none;
+}
+button {
+  font-family: inherit;
+  border: none;
+}
 
 /* */
 
-main{
+main {
   margin: 0 auto;
-    padding: 1rem;
-    max-width: 780px;
-
+  padding: 1rem;
+  max-width: 780px;
 }
 
-.box__letter{
-   margin-top: 1.2rem;
-   margin-bottom: 2.8rem;
-   display: flex;
-   justify-content: center;
-   padding: 0 1.2rem;
+.box__letter {
+  margin-top: 1.2rem;
+  margin-bottom: 2.8rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  gap: 2rem;
+  padding: 0 1.2rem;
 }
 
-.box__letter img{
-    max-width: 370px;
- }
-
- .box_content{
-    padding: 2rem;
- }
-
- .box__info{
-    text-align: center;
- }
-
- .box__title{
-    font-size: var(--font-size-title);
- }
-
- .box__response{
-    margin-top: 50px;
-    padding: 0 2rem;
-    display: flex;
-    gap: 1rem;
-    justify-content: space-around;
- }
-
- .box__icon{
-   cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    gap: 1rem;
-    opacity: 0.7;
+.box__letter img {
+  max-height: 500px;
 }
 
-.box__icon:hover{
-   opacity: 1;
+.box_content {
+  padding: 2rem;
 }
 
-
-.box__icon span{
-    font-size: 17px;
+.box__info {
+  text-align: center;
 }
 
-.box__icon::before{
+.box__title {
+  font-size: var(--font-size-title);
+}
+
+.box__response {
+  margin-top: 50px;
+  padding: 1rem 2rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: space-around;
+}
+
+.box__icon {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  opacity: 0.7;
+}
+
+.box__icon:hover {
+  opacity: 1;
+}
+
+.box__icon span {
+  font-size: 17px;
+}
+
+.box__icon::before {
   content: "";
   width: 70px;
   aspect-ratio: 1;
@@ -113,40 +121,36 @@ main{
 
 .response__input:checked + .box__icon {
   opacity: 1;
- 
 }
 
 .response__input:checked + .box__icon::before {
   background-position: 50% 100%;
- 
 }
 
-
-.response__input{
-  display: none;
+.response__input {
+  opacity: 0;
+  position: absolute;
 }
 
-.form__container{
+.form__container {
   margin-top: 3rem;
   margin-bottom: 4rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
-
 }
 
-.form__number{
+.form__number {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.form__title{
+.form__title {
   font-size: var(--font-size-title);
 }
 
-.form__select{
-
+.form__select {
   width: 170px;
   background-image: url("./img/arrow.png");
   background-repeat: no-repeat;
@@ -162,44 +166,43 @@ main{
   border: var(--color-pink) solid 1px;
 }
 
-.form__guest{
+.form__guest {
   display: flex;
   flex-direction: column;
   gap: 3rem;
 }
 
-.form__input{
+.form__input {
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
-.form__input input{
-  font-family: 'Forum', cursive;
+.form__input input {
+  font-family: "Forum", cursive;
   color: var(--color-text);
   padding: 0.7rem 0.9rem;
   font-size: 15px;
 }
 
-
-.form__input input::placeholder{
-  font-family: 'Forum', cursive;
+.form__input input::placeholder {
+  font-family: "Forum", cursive;
   opacity: 0.6;
 }
 
-.box__contact{
+.box__contact {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.form__btn{
+.form__btn {
   margin-top: -20px;
   display: flex;
   justify-content: center;
 }
 
-.btn{
+.btn {
   cursor: pointer;
   font-size: var(--font-size-title);
   color: inherit;
@@ -208,7 +211,6 @@ main{
   background-color: white;
   min-width: none;
 }
-
 
 .thk__box {
   height: 100vh;
@@ -234,23 +236,21 @@ main{
   z-index: 10;
 }
 
-
 @media (min-width: 700px) {
-  .form__select{
+  .form__select {
     width: 30%;
   }
-  .box__icon span{
+  .box__icon span {
     font-size: 25px;
-}
-  .box__letter img{
+  }
+  .box__letter img {
     max-width: 500px;
- }
+  }
 }
 
 .hidden {
   display: none;
 }
-
 
 @media (max-width: 500px) {
   .thk__circle {
