--- a/src/styles.css
+++ b/src/styles.css
@@ -64,6 +64,18 @@ main {
   align-items: center;
 }
 
+.box__sound{
+  position: fixed;
+  padding: 1rem;
+  top: 0;
+  right: 0;
+}
+
+.box__sound img{
+  cursor: pointer;
+  width: 30px;
+}
+
 .box__img{
   padding: 2rem 2rem 0 2rem;
   height: 500px;
@@ -236,6 +248,63 @@ main {
   width: 300px;
   z-index: 10;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.7);
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px 25px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px;
+  text-align: center;
+  position: relative;
+}
+
+.close {
+  color: #aaa;
+  position: absolute;
+  right: 8px;
+  top: 0;
+  font-size: 35px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn-accept {
+  background-color: var(--color-pink);
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-accept:hover {
+  background-color: var(--color-pink-dark);
+}
+
 
 @media (min-width: 700px) {
   .form__select {
